* @MatchPattern can now match against multiple patterns
+ added support for logging via SLF4J
+ added constraint check exclusion feature which can be used for fine-grained deactivation of constraints
+ added @net.sf.oval.constraint.exclusion.Nullable constraint check exclusion


2008-04-05 v1.20
================
* upgraded to MVEL 1.2.24
* upgraded to Javolution 5.2.6
* upgraded to AspectJ 1.5.4
* upgraded to Groovy 1.5.4
* upgraded to JRuby 1.0.3
* upgraded to Paranamer 1.1.2
* upgraded to Rhino 1.7R1
* upgraded to GNU Trove 2.0.3
* upgraded to XStream 1.3
- fixed bug [ 1885645 ] Validator.validateFieldValue should not return null
- fixed bug [ 1834537 ] NullPointerException in constraintViolation.getCauses()
- fixed bug [ 1852088 ] Incorrect default message for NotEqual validation
- fixed bug [ 1852087 ] Corrupt default localized messages
- fixed bug [ 1868301 ] OVal with groovy - Performance Evaluation
- fixed bug [ 1917978 ] Length of @Column should be ignored if @Lob is present
- fixed bug [ 1934263 ] Versionconflict with WLS10.0 Clientlib
* changed scope of AnnotationsConfigurer.initializeCheck(...) to protected to allow better customization of the instantiation of checks
+ added support for Apache Commons JEXL as expression language
+ added @net.sf.oval.constraint.EqualToField (thanks to anydoby for the idea)
+ added @net.sf.oval.constraint.NotEqualToField (thanks to anydoby for the idea)
+ added @net.sf.oval.constraint.DateRange (thanks to anydoby for the idea)
+ added Japanse translation of the constraint violation messages [ 1911078 ] (thanks to Shinpei Ohtani)

2007-11-02 v1.10
================
Built-in constraints:
 + added @net.sf.oval.constraint.AssertURL (thanks to Makkari)
 + added @net.sf.oval.constraint.InstanceOfAny
 + added @net.sf.oval.constraint.MemberOf
 + added @net.sf.oval.constraint.NotEqual
 + added @net.sf.oval.constraint.NotMemberOf
 + added errorCode property
 + added severity property
 
Expression languages: